# critic

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
critic/: Cargo.toml  (+1 more)
critic-components/: Cargo.toml
critic-components/src/: lib.rs
critic-components/src/accordion/: _original_license  mod.rs
critic-components/src/editor/: blocks.rs  mod.rs  save.rs  undo.rs  versification_scheme.rs
critic-components/src/filetransfer/: mod.rs  services.rs
critic-components/src/icons/: mod.rs
critic-components/src/xmleditor/: mod.rs
critic-server/: Cargo.toml
critic-server/.sqlx/: query-0848255b7c4bff3f8e6a2824d3a24ea79f3b37264a81f17a928735955dc7e1e4.json  query-0afe656cba1ac0f6eeee1a83410927fd80461b3c750bacc0a68ff11f352a717d.json  query-2ef14a3849a13e60a6784c239dcefd982bbe5a1147c0ae5e0d2d42602da24255.json  query-2f4390e4f535c37184a5fe071a4a9238b03c623f844f308ba39292f3b144016c.json  query-4343afd9e34ba1acdfb15a69d36ce2be7d18ca01709146adb786b49755dff447.json  query-59dc4a0f130a1d0acab1fc9381cfbd4f812f8b31fdb57107b74945843582c266.json  query-7708e1691231cd3d4f155c08344e8e97f1c4937eea46f64616a210c1dff56754.json  query-7aff3cbd1ed036fe94b05f461763be4c7dea1323c65c7ce92739af84b804fb73.json  query-7ff87a9a2057fe377697abaa43b1de7714df78e8a5710ca15063e86a169a8638.json  query-8277168603d1b07c941a0a5b345eb2f5c7bc0058159ca061d53b7902408dd694.json  query-86bedabaefa8f64195cb3c2a2bae6de3cd3a5ad74aafb2ac326fa17a2d9e943d.json  query-a7660f4a77617970be9217e5825fa6d86af0e94fe98cf17c25c39c0ee891293e.json  query-b4405aafb13d5d48d85025eb0067de0f92549ffad4f376cec122b29d0c6db7ce.json  query-c0e87e3e480365feaf5fdb6ab0f05a867852eb14f74e3df998dd824a58674c30.json  query-cd3c804191bbf4df73b50c34952e668679a62929c0ec98e528da11c203dd410b.json  query-de9c7bd8a5702d33418bfcdc9fa0150c4a34739fc37530e06433d196d4c934c0.json  query-e2451c86bd6938bcfb1988a0208e99a571c6bebea3d835197ae7eea9170ff30e.json  query-edc47e70a882be7512375c755b693054d94ef1053c7a173245f53c30d3248966.json  query-f29fefdfe66bb5f9075261ce4fe041c4f7fa753bfa597f1ebe9f83f232dd166e.json
critic-server/migrations/: 202506211654_user_session.down.sql  202506211654_user_session.up.sql  202507071848_versification_scheme.down.sql  202507180940_manuscript.down.sql  202507180940_manuscript.up.sql  202507180941_page.up.sql  202507181013_verse_map.up.sql  202507311904_reconciliation.down.sql  202507311904_reconciliation.up.sql
critic-server/src/: config.rs  lib.rs  upload.rs
critic-server/src/auth/: backend.rs  mod.rs
critic-server/src/config/: mod.rs
critic-server/src/db/: mod.rs
critic-server/src/github/: mod.rs
critic-server/src/gitlab/: mod.rs
critic-server/src/minification/: mod.rs
critic-server/src/signal_handler/: mod.rs
critic-server/src/static_files/: mod.rs
critic-server/src/transcription_store/: mod.rs
critic-server/src/upload/: mod.rs
critic-shared/: Cargo.toml
critic-shared/src/: lib.rs  urls.rs
(+59 files in other folders)
