[package]
name = "critic-components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
critic-format = { path = "../../critic-format/" }
critic-shared = { path = "../critic-shared/" }
critic-server = { path = "../critic-server/", optional = true }

leptos = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
console_error_panic_hook = { version = "0.1", optional = true}
leptos_meta = { version = "0.8.2" }
wasm-bindgen = { version = "=0.2.100", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
leptos-use = { version = "0.16.2", features = ["use_event_listener"] }
web-sys = "0.3.77"
reqwasm = { version = "0.5.0" }
human_bytes = { version = "0.4.3" }
send_wrapper = { version = "0.6.0" }
quick-xml = { version = "0.38.0", features = ["serialize"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "critic-shared/ssr",
    "dep:quick-xml",
    "dep:critic-server",
]
